00-sample-apps/springboot-todo-postgresdb/k8s_manifests/todo-app-k8s-manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: springboot-todo-s2i-git
spec:
  subdomain: springboot-todo-s2i-git
  to:
    kind: Service
    name: springboot-todo-s2i-git
    weight: 100
  port:
    targetPort: 9001-tcp
  wildcardPolicy: None
